fix: Single property page alignment

--- a/assets/css/custom-css/index.css
+++ b/assets/css/custom-css/index.css
@@ -992,7 +992,7 @@ header {
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 40px;
-  margin-block-end: 100px;
+  margin-block-end: 140px;
 }
 
 .result-analytics-data {
